fix contact overlapping of hello button and copyright session

--- a/styles/Pages/contact.module.scss
+++ b/styles/Pages/contact.module.scss
@@ -4,13 +4,13 @@
 .contactpage {
   position: relative;
   // z-index: -10;
-  height: 100%;
+  height: 90vh;
   padding: 0% 10%;
 
 //   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 
   // border: 1px solid lightblue;
@@ -20,6 +20,7 @@
     padding: 0%;
     // width: 100%;
     // padding: 20% 10%;
+    // background-color: green;
     // border: 1px solid rgb(20, 190, 74);
     // @include absCenter;
     text-align: center;
@@ -63,30 +64,33 @@
       }
     }
 
-    .copyright {
-        width: 100%;
-        // border: 1px solid white;
     
-        position: absolute;
-        bottom: 0%;
-    
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    
-        .p {
-          font-family: $code-font-style;
-          
-        }
-
-       
-      }
   }
 
-  @media(max-width:700px){
-    padding-top: 10%;
-    margin-bottom: 10rem;
+  .copyright {
+    width: 100%;
+    // background-color: red;
+
+    position: relative;
+    bottom: 0%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+
+    .p {
+      font-family: $code-font-style;
+      text-align: center;
+    }
+
+   
+  }
+
+  @media(max-width:900px){
+    padding-top: 0%;
+    padding-bottom: 14%;
   }
 
 }
